--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,16 @@
+body{
+    background-color: rgb(245, 219, 185);
+    
+}
 header img{
     width: 20vw;
     margin-top: 1px;
+    margin-left: 0px;
 }
 .menu-lateral{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(245, 219, 185);
     width: 20%;
+    display: inline;
 }
 .menu-lateral a{
     text-decoration: none;
@@ -16,12 +22,57 @@ header img{
 footer{
     width: 20%;
     height: 100vh;
-    margin-bottom: 0%;
-    margin-top: 25%;
+    margin-bottom: 10%;
+    margin-top: 50%;
 }
 #autor{
     padding: 0px;
     margin-top: 30%;
     margin-bottom: 0%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+main{
+    display: flex;
+    width: 95vw;
+    height: 60vh;
+    padding: 0%;
+    z-index: 1000;
+    position: absolute;
+
+    border-radius: 10% 10% 10% 10%;
+
+}
+.productos{
+    margin-left: 3%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    border-radius: 50px;
+    width: 95vw;
+    height: 60vh;
+    background-color: rgb(196, 165, 137);;
+}
+.productos h2{
+    margin-left: 5%;
+}
+.cajas{
+    display: grid;
+    background-color: white;
+    width: 20%;
+    height: 55%;
+    margin-left: 5%;
+    border-radius: 10%;
+    z-index: 10000000;
+}
+.cajas img{
+    border-radius: 10%;
+    width: 100%;
+    height: 70%;
+}
+.cajas h1{
+    padding: 0%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    width: 20%;
+    color: black;
+
 }
