--- a/estilos.css
+++ b/estilos.css
@@ -1,181 +1,147 @@
-body{
+body {
     background-color: rgb(245, 219, 185);
-    
+    margin: 0;
+    padding: 0;
+    font-family: 'Lucida Sans', 'Lucida Grande', Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-header img{
+
+header img {
     width: 20vw;
-    margin-top: 1px;
-    margin-left: 0px;
+    display: block;
+    margin: 10px auto;
 }
-.menu-lateral{
+
+.main-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1200px;
+    margin: 20px;
+    box-sizing: border-box;
+}
+
+.menu-lateral {
     background-color: rgb(245, 219, 185);
     width: 20%;
-    display: inline;
+    padding: 10px;
+    box-sizing: border-box;
+    flex-shrink: 0;
 }
-.menu-lateral a{
+
+.menu-lateral a {
+    display: block;
     text-decoration: none;
-    margin: 1%;
-    margin-top: 2%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 10px 0;
     color: rgb(128, 107, 79);
 }
-footer{
-    width: 20%;
-    height: 0vh;
-    margin-bottom: 10%;
-    margin-top: 80%;
-}
-#autor{
-    padding: 0px;
-    margin-top: 30%;
-    margin-bottom: 0%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-main{
-    display: flex;
-    width: 100%;
-    height: 60vh;
-    padding: 0%;
-    z-index: 1000;
-    position: absolute;
 
-    border-radius: 10% 10% 10% 10%;
+.productos {
+    flex: 1;
+    padding: 20px;
+    background-color: rgb(196, 165, 137);
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-left: 10px;
+}
 
+.productos h2 {
+    text-align: center;
+    margin-bottom: 20px;
 }
-.productos{
-    margin-left: 3%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+.cajas, .cajas2, .cajas3, .cajas4 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+}
+
+.cajas div, .cajas2 div, .cajas3 div, .cajas4 div {
+    background-color: rgb(235, 202, 158);
+    border-radius: 10px;
+    flex: 1 1 calc(23% - 20px);
+    box-sizing: border-box;
+    min-width: 200px;
+    max-width: 250px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.cajas img, .cajas2 img, .cajas3 img, .cajas4 img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.cajas h1, .cajas2 h1, .cajas3 h1, .cajas4 h1 {
+    font-size: 1rem;
+    margin: 5px 0;
+}
+
+.btn-agregar {
+    background-color: rgb(128, 107, 79);
     color: white;
-    border-radius: 50px;
-    width: 95vw;
-    height: 115vh;
-    background-color: rgb(196, 165, 137);;
-    scrollbar-width: 50vw;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
 }
-.productos h2{
-    margin-left: 5%;
-    margin-right: 5%;
+
+.btn-agregar:hover {
+    background-color: #0056b3;
 }
-.cajas{
-    display: flex;
-    flex-direction: row;
-    column-gap: 0vw;
-    z-index: 10000000;
+
+@media (max-width: 768px) {
+    .main-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu-lateral {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .cajas, .cajas2, .cajas3, .cajas4 {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
+        gap: 10px; /* Espaciado entre los productos */
+    }
+
+    .cajas div, .cajas2 div, .cajas3 div, .cajas4 div {
+        margin: 5px;
+        padding: 5px; /* Reduce el padding interno */
+    }
+
+    .cajas img, .cajas2 img, .cajas3 img, .cajas4 img {
+        width: 100%; /* Ajusta al ancho del contenedor */
+        height: auto; /* Mantiene la proporción */
+        max-height: 150px; /* Limita la altura máxima de la imagen */
+        object-fit: cover; /* Ajusta la imagen dentro del contenedor */
+    }
+
+    .btn-agregar {
+        font-size: 0.8rem; /* Reduce el tamaño del texto del botón */
+        padding: 5px; /* Ajusta el espaciado del botón */
+    }
 }
-.cajas div{
-    width: 20%;
-    height: 30vh;
-    background-color: rgb(235, 202, 158);
-    margin-left: 4%;
-    border-radius: 10%;
-}
-.cajas img{
-    border-radius: 10%;
-    width: 100%;
-    height: 70%;
-}
-.cajas h1{
-    width: 95%;
-    padding: 0%;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    color: black;
-    margin: 3%;
-    margin-right: 3%;
-    font-size: small;
-}
-.cajas a{
-    font-size: normal;
-    text-decoration: none;
-}
-.cajas2{
-    display: flex;
-    flex-direction: row;
-    column-gap: 0vw;
-    z-index: 10000000;
-}
-.cajas2 div{
-    width: 20%;
-    height: 30vh;
-    background-color: rgb(235, 202, 158);
-    margin-left: 4%;
-    border-radius: 10%;
-}
-.cajas2 img{
-    border-radius: 10%;
-    width: 100%;
-    height: 70%;
-}
-.cajas2 h1{
-    width: 95%;
-    padding: 0%;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    color: black;
-    margin: 3%;
-    margin-right: 3%;
-    font-size: small;
-}
-.cajas2 a{
-    font-size: normal;
-    text-decoration: none;
-}
-.cajas3{
-    display: flex;
-    flex-direction: row;
-    column-gap: 0vw;
-    z-index: 10000000;
-}
-.cajas3 div{
-    width: 20%;
-    height: 30vh;
-    background-color: rgb(235, 202, 158);
-    margin-left: 4%;
-    border-radius: 10%;
-}
-.cajas3 img{
-    border-radius: 10%;
-    width: 100%;
-    height: 70%;
-}
-.cajas3 h1{
-    width: 95%;
-    padding: 0%;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    color: black;
-    margin: 3%;
-    margin-right: 3%;
-    font-size: small;
-}
-.cajas3 a{
-    font-size: normal;
-    text-decoration: none;
-}
-.productos2{
-    margin-left: 3%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
-    border-radius: 50px;
-    width: 95vw;
-    height: 40vh;
-    background-color: rgb(196, 165, 137);;
-    scrollbar-width: 50vw;
-}
-.productos2 h2{
-    margin-left: 5%;
-    margin-right: 5%;
-}
-.cajas2 div{
-    width: 20%;
-    height: 30vh;
-    background-color: rgb(235, 202, 158);
-    margin-left: 4%;
-    border-radius: 6%;
-}
-.footer2{
-    width: 20%;
-    height: 10vh;
-    margin-bottom: 10%;
-    margin-top: 0%;
+
+
+
+@media (max-width: 480px) {
+    .cajas, .cajas2, .cajas3, .cajas4 {
+        grid-template-columns: repeat(2, 1fr); /* Mantiene dos columnas en pantallas más pequeñas */
+        gap: 8px; /* Espaciado más pequeño entre productos */
+    }
+
+    .cajas img, .cajas2 img, .cajas3 img, .cajas4 img {
+        max-height: 120px; /* Reduce un poco más la altura máxima de la imagen */
+    }
 }
